--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -43,60 +43,75 @@
 
         </FrameLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edName"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilName"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:background="@drawable/grey_stroke"
             android:fontFamily="@font/opensans_regular"
             android:hint="@string/name"
-            android:inputType="text"
-            android:padding="@dimen/_10sdp"
-            android:text="@={userModel.ownerName}"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_14ssp"
+            android:layout_marginTop="@dimen/_15sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/frameImg" />
+            app:layout_constraintTop_toBottomOf="@+id/frameImg">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/grey_stroke"
+                android:fontFamily="@font/opensans_regular"
+                android:inputType="text"
+                android:padding="@dimen/_10sdp"
+                android:text="@={userModel.ownerName}"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_14ssp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edEmail"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilEmail"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:background="@drawable/grey_stroke"
             android:fontFamily="@font/opensans_regular"
             android:hint="@string/email"
-            android:inputType="textEmailAddress"
-            android:padding="@dimen/_10sdp"
-            android:text="@={userModel.email}"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_14ssp"
+            android:layout_marginTop="@dimen/_15sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edName" />
+            app:layout_constraintTop_toBottomOf="@+id/tilName">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/grey_stroke"
+                android:fontFamily="@font/opensans_regular"
+                android:inputType="textEmailAddress"
+                android:padding="@dimen/_10sdp"
+                android:text="@={userModel.email}"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_14ssp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:id="@+id/editlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_15sdp"
-            android:background="@drawable/grey_stroke"
+            android:background="@drawable/grey_dark_stroke"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edEmail">
+            app:layout_constraintTop_toBottomOf="@+id/tilEmail">
 
             <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                 android:id="@+id/ccpCountryCode"
                 android:layout_width="wrap_content"
-                app:ccp_hideNameCode="true"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:layout_marginStart="@dimen/_5sdp"
+                android:gravity="center"
                 app:ccp_defaultCode="91"
+                app:ccp_hideNameCode="true"
                 app:ccp_textSize="@dimen/_12ssp" />
 
             <View
@@ -109,6 +124,7 @@
                 android:id="@+id/edPhoneNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/_2sdp"
                 android:layout_marginStart="@dimen/_4sdp"
                 android:background="@android:color/transparent"
                 android:hint="@string/enter_mobile_number_mandatory"
@@ -118,7 +134,7 @@
                 android:text="@={userModel.mobile}"
                 android:textColor="@color/black"
                 android:textColorHint="@color/grey"
-                android:textSize="@dimen/_13ssp" />
+                android:textSize="@dimen/_14ssp" />
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
@@ -132,7 +148,7 @@
             android:text="@string/update_profile"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/_14ssp"
+            android:textSize="@dimen/_16ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editlayout" />
